--- a/codecrafters-shell.csproj
+++ b/codecrafters-shell.csproj
@@ -15,6 +15,9 @@
     <None Update="src\Tests\echo.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="src\Tests\externalfile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
